Changelog since cleanup-branch of 31.01.2020


changelog of snapshot [next] (theme: feature cleanup & improvements)
    changelog of dev-cycle 1 [planned: optimisations to rendering]
        - optimized block rendering, deprecated some old stuff

        fixed issues:
            - block updates were not called in every case
            - walls and fences were not updating their state correctly
            - during printing an exception, an new exception could occur
        todo: fix offset of rendering of fences

    changelog of dev-cycle 2 [planned: advanced rendering functions]
    changelog of dev-cycle 3 [planned: UI improvements]
    changelog of dev-cycle 4 [planned: State-definition files]
    changelog of dev-cycle 5 [planned: preparation for client/server: IWorld-interface and integrated-impl.]

    changelog of dev-cycle [last] [planned: bug fixing of work, overall bug fixing, testing]


    planned (some parts may be moved to future snapshots):
        - fix issues: 80, 157, 175, 176, 177, 178
        - make it possible for player-instances to have different skins based on their name, fix issue 181
        - make the hand of the player move when placing block & move together when moving camera up / down
        - add support for .obj files for block models
        - add support for forge block state format, maybe split up the blockstate-loaders into different files
        - clean up & improve the following elements: (for all: use texture reload event)
            button: clean up rendering code, maybe use an batch for all parts, listen to the on_resize event for
                re-calculation
            image: clean up rendering code, check if it is still working
            lable: clean up rendering code, can we add possibility to render colored text
            progress bar: fix issue 174, clean up code, can we make pgb change color over time
            text input: clean up rendering code, implement navigation & selection